@@ -144,6 +144,7 @@ Collabtive 0.7
 + Added title for install script
 + Beautified code of several template files
 + Fixed link in the email notifications for message-replies to point to the replied to message instead of the reply
++ Fixed a bug where the datepicker would not keep the dateformat set in the systemsettings and would revert to d.m.Y when changing months.
 
 Collabtive 0.6.5
 + Fixed bug when assigning tasks while email notification is deactivated / off
